feat(analytics): deliver participant progress and goal insights